# TB-Rename-Files

./: README.md  pyproject.toml  rename_files.py
src/td_rename/: __init__.py  cli.py  common.py  csv_mode.py  id_mode.py
