[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "td-rename"
version = "0.1.0"
description = "Rename Toniebox files using CSV metadata or folder ids."
readme = "README.md"
authors = [{ name = "Unknown" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
"td-rename" = "td_rename.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/td_rename"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "rename_files.py"]
